# iced-demo

./: .gitignore  Cargo.toml
src/: common_assets.rs  data_table.rs  main.rs
